websitev2/i18n/de/docusaurus-plugin-content-docs/version-13.0/titan-basics/workspace-windows.md
---
id: workspace-windows
title: Workspace Windows
sidebar_label: Workspace Windows
original_id: workspace-windows
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

Der Hauptbereich der Programmoberfläche
enthält die Arbeitsfenster. Diese wiederum enthalten Buttons
(berührungsempfindliche Flächen) zur Auswahl von Geräten, Gruppen,
Paletten, Playbacks usw. Ebenso können Informationsfenster wie die
Übersicht über die Playbacks oder der integrierte Visualiser als
Arbeitsfenster aufgerufen werden.

![Workspaces](/docs/images/Titan-Touch-Screen-User-Interface.png)

Die Anzeige beim Sapphire Touch ist geringfügig anders:

Linker Touchscreen (Sapphire Touch)\
![Sapphire Left](/docs/images/Sapphire-Left.png)

Rechter Touchscreen (Sapphire Touch)\
![Sapphire Right](/docs/images/Sapphire-Right.png)

Auswahl und Positionierung der Arbeitsfenster
---------------------------------------------

Die gewünschten Fenster des Arbeitsbereichs lassen sich per Befehl
<Keys.SoftKey>Open Workspace Window</Keys.SoftKey> aus dem Hauptmenü öffnen. Außerdem
lässt sich die Funktion <Keys.SoftKey>Open Workspace Window</Keys.SoftKey> durch Betätigen der
<Keys.HardKey>View</Keys.HardKey> bzw. <Keys.HardKey>Open</Keys.HardKey>-Taste erreichen. Ferner stehen
Tastenkombinationen zum Aufrufen der wichtigsten Fenster zur Verfügung
(siehe nächster Abschnitt). **In diesem Manual wird diese Taste als
<Keys.HardKey>View/Open</Keys.HardKey> bezeichnet, um beide Tastenbezeichnungen einzubeziehen**.

Zum Ändern von Größe und Position der Fenster dienen die
Fenster-Steuertasten ('Window-Control') oberhalb des Zifferntastenblocks
sowie die Schaltfläche mit dem Zahnrad in der Titelleiste jedes
Fensters; weitere Details siehe nächster Abschnitt. Die Taste
<Keys.HardKey>min/max</Keys.HardKey> schaltet das jeweils aktive Fenster zwischen Vollbildschirm
und einem Viertel des Bildschirms um. Die Taste <Keys.HardKey>size/position</Keys.HardKey> bewegt
das aktive Fenster durch die möglichen Positionen. Zum Aktivieren
(Auswählen) eines Fensters berührt man einfach dessen Titelleiste.

Um das aktive Fenster auf den externen Monitor zu verschieben, drückt
man bei gedrückter <Keys.HardKey>AVO</Keys.HardKey>-Taste die Taste <Keys.HardKey>Size/Position</Keys.HardKey>, oder
betätigt die Taste <Keys.HardKey>View / Open</Keys.HardKey>, dann <Keys.SoftKey>Window Options</Keys.SoftKey>, dann
<Keys.SoftKey>Move Screen</Keys.SoftKey>.

### Tastenkombinationen zur Fensterauswahl

<Keys.HardKey>View / Open</Keys.HardKey> und eine Attributbank-Taste öffnet das jeweilige
Palettenfenster.

Mit <Keys.HardKey>View / Open</Keys.HardKey> + <Keys.HardKey>Patch</Keys.HardKey> können Sie die Patch-Ansicht öffnen.

Drücken Sie <Keys.HardKey>View / Open</Keys.HardKey>, gefolgt von der Schaltfläche eines
gepatchten Gerätes, so öffnet sich die Geräteanzeige mit Details zu dem
jeweiligen Gerät.

<Keys.HardKey>View / Open</Keys.HardKey> + <Keys.HardKey>Connect</Keys.HardKey> öffnet das Fenster 'Playback View'.

<Keys.HardKey>View / Open</Keys.HardKey> + <Keys.HardKey>Off</Keys.HardKey> öffnet das Fenster 'Active Playbacks'.

<Keys.HardKey>View / Open</Keys.HardKey> + <Keys.HardKey>Macro</Keys.HardKey> öffnet das Fenster 'Macros'.

### Schaltflächen für die Einrichtung der Fenster

Oben rechts in der Titelleiste verfügt jedes Fenster über drei oder vier
Schaltflächen, über die weitere Funktionen erreichbar sind.

![Capture Settings Window](/docs/images/Camera-movements-in-Capture-Visualiser-Workspace-Window.png)

Die Schaltfläche für das <strong>Kontext-Menü</strong> gibt es nur beim Sapphire Touch
und beim Titan Go; mit ihr wird ein zusätzliches Menü der mit diesem
Fenster verknüpften Funktionen angezeigt.

![Patch View](/docs/images/Patch-View-2.png)

Auf allen anderen Pulten wird das Kontext-Menü des aktiven Fensters
jeweils im Kontext-Bereich angezeigt. Die dort angezeigten Funktionen
wechseln je nachdem welches Fenster gerade aktiv ist. Im folgenden Bild
wird die Anzeige bei aktiviertem Patch-View-Fenster dargestellt.

![Context Menu](/docs/images/Context-Menu.png)

Mit den <strong>Optionen für die Arbeitsfenster</strong> (stilisiertes Zahnrad)
können Größe und Position der Fenster auf verschiedene Standardwerte
gesetzt und die Größe der Schaltflächen sowie die Schriftgröße für jedes
Fenster getrennt eingestellt werden. Die verfügbaren und angezeigten
Elemente hängen vom jeweiligen Fenster sowie der Einrichtung des Pultes
ab, etwa davon, ob ein externer Bildschirm angeschlossen ist.

![Window Appearance Menu](/docs/images/Window-Appearance-Options.png)

Die Fenster lassen sich sowohl in Standard-Größen und Positionen
anordnen als auch sehr frei verändern. Dazu dient der Button **Größe
ändern**.

![Resize](/docs/images/Resize.png)

Steht die Option <Keys.SoftKey>Edit All Windows</Keys.SoftKey> auf Off, so wird jeweils nur ein
Fenster verändert.

Klicken und ziehen Sie die obere linke oder die untere rechte Ecke des
Fensters, um dessen Größe zu ändern. Klickt und zieht man dagegen
irgendwo anders auf dem Bildschirm, so wird dort das Fenster neu
aufgezogen

Klicken Sie irgendwohin, so wird das Fenster dort platziert und rot
dargestellt, bis zur Platzierung der gegenüberliegenden Ecke nochmals
woanders geklickt wird.

Steht die Option <Keys.SoftKey>Resize Neighbours</Keys.SoftKey> (Nachbarn anpassen) auf On
(Vorgabe), so werden beim Ziehen einer Ecke angrenzende Fenster soweit
wie möglich mit verändert, um Überlappungen zu vermeiden. Steht diese
Option dagegen auf ‚Off', so wird jeweils nur das bearbeitete Fenster
verändert, und alle anderen bleiben unverändert.

Schaltet man <Keys.SoftKey>Edit All Windows</Keys.SoftKey> (Alle Fenster editieren) auf On, so
werden bei allen Fenstern Ecken angezeigt, und man kann ein beliebiges
Fenster verändern. Zum Abschluss drücken Sie dann wieder <Keys.HardKey>EXIT</Keys.HardKey>,
<Keys.HardKey>ENTER</Keys.HardKey> oder <Keys.SoftKey>OK</Keys.SoftKey>.

![Resize](/docs/images/Resize-2.png)

> Wurde beim freien Positionieren ein Fenster versehentlich so klein gemacht, dass der Button für die Größe nicht mehr erreichbar ist, so ist die einfachste Lösung, mit der <Keys.HardKey>Min/Max</Keys.HardKey>-Taste (bzw. Funktion) dieses Fenster wieder ganz groß zu machen und nochmals zu verändern. Bei der PC-Suite (Titan One etc.) bietet sich die Taste F4 der Computertastatur an.

Zum Verschieben des aktiven Fensters zwischen externem Monitor und
Bildschirm klicken Sie in den Fenster-Optionen auf das gewünschte
Display, oder Sie drücken Sie <Keys.HardKey>View / Open</Keys.HardKey>, dann <Keys.SoftKey>Window Options</Keys.SoftKey>, und
schließlich <Keys.SoftKey>Move Screen</Keys.SoftKey>, oder Sie nutzen die Tastenkombination
<Keys.HardKey>AVO</Keys.HardKey>+<Keys.HardKey>Size/Position</Keys.HardKey>.

Aktive Fenster lassen sich mit der Taste <Keys.HardKey>Close</Keys.HardKey> schließen. Zum
gleichzeitigen Schließen aller Fenster drücken Sie <Keys.HardKey>AVO</Keys.HardKey>+<Keys.HardKey>Close</Keys.HardKey>,
oder Sie nutzen die Menütaste <Keys.SoftKey>Close All</Keys.SoftKey>.

### Anzahl und Grösse der Schaltflächen/Raster

Normalerweise wird die Größe der Buttons automatisch an die
Bildschirmgröße angepasst, was z.B. dazu führt, dass sich bei
unterschiedlichen Bildschirmgrößen die Anzahl der Buttons pro
Zeile/Spalte - und damit ggf. die ganze Anordnung - ändert. Um dies zu
verhindern (z.B. wenn im Geräte-Fenster die Anordnung an den
tatsächlichen Aufbau angepasst wurde), kann man alternativ in den
Fenster-Optionen die gewünschte Anzahl angezeigten Zeilen
<Keys.SoftKey>Columns</Keys.SoftKey>/Spalten <Keys.SoftKey>Rows</Keys.SoftKey> fest vorgeben. Damit wird immer die
gewünschte Anzahl an Schaltflächen angezeigt, wobei sich deren Größe
entsprechend ändert.

![Rows and Columns](/docs/images/Rows-and-Columns.png)

Die eingegebene Anzahl von Spalten/Zeilen wird gespeichert, so dass man
testweise zwischen einem fixen und einem variablen Layout hin- und
herschalten kann.

Mini-Display (Nur beim Arena)
-----------------------------

Mit der Taste <Keys.HardKey>Display</Keys.HardKey> unterhalb der Encoder rechts oben kann man 
zwischen vier Ansichten auf dem Mini-Display umschalten:

- Arbeitsfenster mit Legenden für die Encoder
![Arena Miniscreen](/docs/images/Arena-Miniscreen.png)

- Arbeitsfenster mit Legenden für die Macro-/Executortasten
![Mini Screen Macros](/docs/images/Mini-Screen-Macros.png)


- Fenster "feste Playbacks" - Dieses Fenster kann nicht auf den anderen
Bildschirm verschoben werden, und andere Fenster überlagern es nicht.
Die ersten beiden Zeilen sind identisch mit den Macro-/Executortasten
darunter.

- Arbeitsfenster, ohne Legenden für Encoder oder Macrotasten.

Speichern der Arbeitsumgebung
-----------------------------

Mit gespeicherten Arbeitsumgebungen lässt sich die Darstellung des
gesamten Displays durch nur einen Klick ändern/wiederherstellen.

Sie können verschiedene Arbeitsumgebungen (Workspaces) zum schnellen
Abruf auf den 'Workspace'-Schaltflächen (links vom Hauptmenü, bzw.
linker Bildschirmrand beim Sapphire Touch und Titan Go) abspeichern: die
Taste <Keys.HardKey>View / Open</Keys.HardKey> drücken, dann <Keys.SoftKey>Record Workspace</Keys.SoftKey>, dann eine
der 'Workspace'-Schaltflächen betätigen, oder führen Sie einen
Doppelklick auf einer solchen Schaltfläche aus.
Arbeitsumgebungen/Workspaces lassen sich auch auf graue Tasten des
Pultes sowie Macro-Tasten speichern.

![Workspaces](/docs/images/Recoding-a-Workspace-Layout.png)

Arbeitsumgebungen (Workspaces) werden gemeinsam mit der Show
gespeichert.

Als Beispiel sei einmal angenommen, zum Programmieren seien die Fenster
'Fixtures' (Geräte), 'Position Palettes' (Positionspaletten), 'Fixture
Attributes' (Geräteattribute) und 'Shapes' benötigt:

1. Drücken Sie ggf. <Keys.HardKey>Exit</Keys.HardKey>, um ins Hauptmenü zu gelangen, und dann
die Funktionstaste <Keys.SoftKey>Open Workspace Window</Keys.SoftKey>.

2. Aktivieren Sie aus der eingeblendeten Liste den Eintrag
<Keys.SoftKey>Fixtures</Keys.SoftKey>.

3. Öffnet sich das Fenster nicht in der oberen linken Ecke des
Touchscreens, so drücken Sie die Taste <Keys.HardKey>Size/Position</Keys.HardKey> so oft, bis es
dort platziert ist.

4. Betätigen Sie wieder <Keys.SoftKey>Open Workspace Window</Keys.SoftKey> und wählen den
Eintrag <Keys.SoftKey>Positions</Keys.SoftKey>. Bewegen Sie dieses Fenster mit <Keys.HardKey>Size/Position</Keys.HardKey>
an die gewünschte Stelle.

5. Aktivieren Sie auf die gleiche Weise die Fenster \[Attribute
Control\] und <Keys.SoftKey>Shapes</Keys.SoftKey>.

6. Drücken Sie <Keys.HardKey>View / Open</Keys.HardKey>, dann <Keys.SoftKey>Record Workspace</Keys.SoftKey>, oder
<Keys.HardKey>AVO</Keys.HardKey>+<Keys.HardKey>View / Open</Keys.HardKey>. Geben Sie einen Namen für diese
Arbeitsumgebung ein, und klicken Sie auf die 'Workspace'-Schaltfläche,
auf die die aktuelle Arbeitsumgebung gespeichert werden soll.
Alternativ nutzen Sie die 'Quick Record' (Schnellspeicher)-Funktion:
klicken Sie einfach auf eine freie 'Workspace'-Schaltfläche, woraufhin
diese rot hervorgehoben wird und ein '+'-Zeichen zeigt. Geben Sie nun
einen Namen ein, und klicken Sie erneut auf diese Schaltfläche.

-   <Keys.SoftKey>Record Visible/All Windows</Keys.SoftKey> (sichtbare/alle Fenster speichern)
    bestimmt, ob nur die aktiven (sichtbaren), oder aber alle (auch die
    verborgenen) Fenster in der Arbeitsumgebung gespeichert werden
    sollen.

-   <Keys.SoftKey>Remove/Leave other windows on recall</Keys.SoftKey> (beim Aufruf andere Fenster
    schließen/behalten) definiert, ob beim Aufruf der Arbeitsumgebung
    andere Fenster geöffnet bleiben oder geschlossen werden sollen.

-   Zum Löschen einer Arbeitsumgebung drücken Sie <Keys.HardKey>View / Open</Keys.HardKey>, 
	<Keys.HardKey>Delete</Keys.HardKey>, und dann die Schaltfläche der Arbeitsumgebung.

Compatibility windows -- die 'Kompatibilitäts-Fenster'
------------------------------------------------------

Die Fenster "Fixtures and Playbacks" (Geräte und Speicherplätze) und
"Groups and Palettes" (Gruppen und Paletten) ermöglichen Zugriff auf die
Speicherplätze/Tasten, die zwar auf einem Pearl Expert, nicht aber auf
anderen Pulten vorhanden sind. Damit lassen sich also auch auf dem
Expert erstellte Shows laden.

Ist eins dieser Fenster geöffnet, gibt es die Schaltfläche \[Move to
workspace\] im Kontextbereich. Damit lassen sich die betreffenden
Schaltflächen in die richtigen Arbeitsfenster der anderen Titan-Pulte
verschieben. Diesen Vorgang muss man zweimal ausführen: einmal mit
ausgewähltem Fenster "Fixtures and Playbacks", und einmal mit "Palettes
and Groups".

Schnellspeichern
----------------

![Quick Record](/docs/images/Recoding-a-Workspace-Layout.png)
Einige Fenster - für Gruppen, Workspaces,
Playbacks, sowie das Paletten-Fenster -- besitzen eine
Schnellspeicher-Funktion. Nehmen Sie Ihre Einstellungen vor, und klicken
Sie einmal auf eine freie Schaltfläche. Diese wird nun rot und mit einem
Pluszeichen (+) markiert. Nun lässt sich eine Bezeichnung (legend)
eingeben. Danach nochmals die Schaltfläche betätigen, um das Speichern
abzuschließen.

Die Schnellspeicher-Funktion lässt sich in den [Tastenprofilen/Key Profiles](../system-settings/key-profiles.md) deaktivieren.

Legenden und Bezeichnungen
--------------------------

Sämtliche Schaltflächen lassen sich mit frei zu definierenden Legenden
beschriften, um die Übersicht zu behalten. Ferner lassen sich die
Schaltflächen auch bemalen. Dazu drücken Sie zunächst <Keys.SoftKey>Set Legends</Keys.SoftKey>
und wählen dann <Keys.SoftKey>Picture</Keys.SoftKey>; daraufhin öffnet sich ein entsprechendes
Zeichen-Fenster. Außerdem gibt es bereits eine umfangreiche Bibliothek
vorgefertigter Zeichnungen.

Farb-Paletten erhalten automatisch eine Legende mit der entsprechenden
Farbe. Ebenso erhalten Gobo-Paletten ein Bild des Gobos, sofern die
Personality die entsprechenden Informationen enthält.

![Gobos and Beams Workspace Window](/docs/images/Gobos-and-Beams-Workspace-Window.png)

Button-Halo
-----------

Sämtlichen programmierbaren Schaltflächen, etwa den Buttons für Geräte,
Gruppen, Paletten, Playbacks etc., lassen sich farbige Ränder, sog.
Halos, zuweisen. Damit lassen sich diese auch optisch noch besser
unterscheiden. Zum Einstellen dieses Halos dient die Option <Keys.SoftKey>Halo</Keys.SoftKey> im
Legenden-Menü.

![Halo](/docs/images/Fixture-Halo.png)

Wird ein [Halo für Geräte-Tasten](../patching/changing-the-patch.md#halo-für-fixture-buttons) aktiviert, 
so wird dessen Farbe auch in anderen Fenstern verwendet. Außerdem können 
automatisch unterschiedliche Halos pro Gerätetyp vergeben werden.

<strong>Trackball (nur beim Sapphire Touch)</strong>
---------------------------------------

Mit dem Trackball rechts auf dem Pult lässt sich entweder die Maus
steuern, oder die selektierten Geräte.

Zur Auswahl des Maus-Modus halten Sie die Taste <Keys.HardKey>Assign</Keys.HardKey> (unterhalb
des Trackballs) gedrückt und betätigen dazu die Taste <Keys.HardKey>Left</Keys.HardKey> (für: linke
Maustaste). Nun steuert der Trackball die Position des Mauszeigers auf
den Bildschirmen; mit dem Ring um den Trackball kann in den Fenstern
gescrollt werden.

Um in den Modus zur Gerätesteuerung zu schalten, drücken Sie
<Keys.HardKey>Assign</Keys.HardKey> + <Keys.HardKey>Right</Keys.HardKey>: nun steuert der Trackball Pan und Tilt, und mit
dem Ring kann Tilt sehr fein geregelt werden.

<strong>Bildschirmtastatur</strong>
----------------------

Am Ende der Werkzeugleiste (am Mittelsteg zwischen den Bildschirmen beim
Sapphire Touch, ansonsten oben im Bildschirm) befindet sich der Button
zum Aufrufen der Bildschirmtastatur.

![Keyboard Button](/docs/images/Keyboard-Button.png)

Die Bildschirmtastatur kann mit der Schaltfläche "Max/Min" zwischen großen
und kleinen Tasten umgeschaltet werden; mit der Schaltfläche "X" wird
sie geschlossen. Per Anklicken und Ziehen des freien Bereiches oben in
der Bildschirmtastatur lässt sich diese frei positionieren.

Soll die Tastatur automatisch erscheinen, sobald eine Texteingabe
erforderlich ist, so kann das mittels Man/Auto eingestellt werden. Diese
Einstellung bleibt auch beim Schließen der Tastatur aktiv, bis sie
wieder geändert wird.

Die kleine Darstellung der Tastatur (siehe Abbildung) verzichtet auf
einige weniger gebräuchliche Tasten.

![Keyboard](/docs/images/Keyboard.png)
